# myanimelist_scraper

./: .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml  scrap.py  try_scrap.py
data/raw/: 3_gatsu_no_lion_2nd_season_2025-01-17.html  berserk_stats.html  bleach_sennen_kessen_hen_2025-01-17.html  clannad_after_story_2025-01-17.html  code_geass_hangyaku_no_lelouch_r2_2025-01-17.html  fruits_basket_the_final_2025-01-17.html  fullmetal_alchemist_brotherhood_2025-01-17.html  ginga_eiyuu_densetsu_2025-01-17.html  gintama_2025-01-17.html  gintama_enchousen_2025-01-17.html  gintama_the_final_2025-01-17.html  hunter_x_hunter_2011_2025-01-17.html  index.html  kaguya_sama_wa_kokurasetai_ultra_romantic_2025-01-17.html  koe_no_katachi_2025-01-17.html  one_piece_fan_letter_2025-01-17.html  shingeki_no_kyojin_season_3_part_2_2025-01-17.html  sousou_no_frieren_2025-01-17.html  steins_gate_2025-01-17.html
data/scraped/: data.csv
notebooks/: demo.ipynb  draft.ipynb
src/data/raw/: fullmetal_alchemist_brotherhood_2025-01-17.html  index_50.html  one_piece_fan_letter_2025-01-17.html  sousou_no_frieren_2025-01-17.html
src/myanimelist_scraper/: __init__.py  models.py  scrap.py  scraper.py  storage.py  utils.py
src/myanimelist_scrapper/: models.py  scrapper.py
