[project]
name = "myanimelist-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["beautifulsoup4>=4.12.3", "lxml>=5.3.0", "requests>=2.32.3"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.8.6",
]

[tool.ruff]
select = ["ALL"]
ignore = ["D100", "D103", "D107", "T201"]
