[project]
name = "myanimelist-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "bs4>=0.0.2",
  "lxml>=5.3.0",
  "pandas>=2.2.3",
  "requests>=2.32.3",
  "rich>=13.9.4",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5", "ruff>=0.8.6"]

[tool.ruff]
select = ["ALL"]
ignore = ["D100", "D103", "D107", "T201", "ERA001", "TD002", "TD003"]
